<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.tairoroberto.fiapintent.LoginActivity"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usuario">

        <EditText
            style="@style/editTextStyle"
            android:hint="@string/usuario" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/senha">

        <EditText
            style="@style/editTextSenhaStyle"
            android:hint="@string/senha" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:id="@+id/buttonLogin" />

    <TextView
        android:text="@string/nao_sou_cadastrado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCadastrar"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/dimen_8dp"
        android:paddingTop="@dimen/dimen_8dp"
        android:textColor="@drawable/link"
        android:clickable="true"/>

    <TextView
        android:text="@string/receber_sms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSMS"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/dimen_8dp"
        android:paddingTop="@dimen/dimen_8dp"
        android:textColor="@drawable/link"
        android:clickable="true"/>
</LinearLayout>
